API初步
