# swagger/swagger.yml
@@ -69,16 +69,21 @@ definitions:
       Id:
         type: integer
         format: int64
+      Name:
+        description: 年龄
+        type: string
       Region:
         description: 地区/国家
         type: string
       Sexuality:
-        description: 性别(0女1男2保密)
-        type: integer
-        format: int32
+        description: 性别(female|male)
+        type: string
       Suggest:
         description: 建议
         type: string
+  models.Sexuality:
+    title: Sexuality
+    type: string
   models.SurveyForm:
     title: SurveyForm
     type: object
@@ -92,13 +97,15 @@ definitions:
       Game:
         description: 游戏
         type: string
+      Name:
+        description: 年龄
+        type: string
       Region:
         description: 地区/国家
         type: string
       Sexuality:
-        description: 性别(0女1男2保密)
-        type: integer
-        format: int32
+        $ref: '#/definitions/models.Sexuality'
+        description: 性别(female|male)
       Suggest:
         description: 建议
         type: string
